--- a/package.json
+++ b/package.json
@@ -65,6 +65,9 @@
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "1.2.2",
     "url-loader": "1.1.2",
+    "video-react": "^0.13.1",
+    "video.js": "^5.19.1",
+    "videojs-for-react": "0.0.3",
     "webpack": "4.28.3",
     "webpack-dev-server": "3.1.14",
     "webpack-manifest-plugin": "2.0.4",
