--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "postcss-safe-parser": "4.0.1",
     "query-string": "^6.5.0",
     "react": "^16.8.6",
+    "react-amap": "^1.2.8",
     "react-app-polyfill": "^0.2.2",
     "react-dev-utils": "^8.0.0",
     "react-dom": "^16.8.6",
@@ -67,8 +68,8 @@
     "swiper": "^4.5.0",
     "terser-webpack-plugin": "1.2.2",
     "url-loader": "1.1.2",
-    "video-react": "^0.13.1",
-    "video.js": "^5.19.1",
+    "video-react": "^0.13.7",
+    "video.js": "^5.20.5",
     "videojs-for-react": "0.0.3",
     "webpack": "4.28.3",
     "webpack-dev-server": "3.1.14",
