--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "jest-watch-typeahead": "^0.2.1",
     "jquery": "^3.4.1",
     "jsonp": "^0.2.1",
+    "leaflet": "^1.5.1",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "0.5.0",
@@ -139,5 +140,6 @@
     "presets": [
       "react-app"
     ]
-  }
+  },
+  "proxy": "http://localhost:3000"
 }
