--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-loader": "8.0.5",
     "babel-plugin-import": "^1.11.0",
     "babel-plugin-named-asset-import": "^0.3.1",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-react-app": "^7.0.2",
     "bfj": "6.1.1",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
@@ -91,7 +92,8 @@
     ">0.2%",
     "not dead",
     "not ie <= 11",
-    "not op_mini all"
+    "not op_mini all",
+    "ie 11"
   ],
   "jest": {
     "collectCoverageFrom": [
