--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-react-app": "^7.0.2",
     "bfj": "6.1.1",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
+    "console-polyfill": "^0.3.0",
     "css-loader": "1.0.0",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
@@ -26,6 +27,7 @@
     "draftjs-to-html": "^0.8.4",
     "echarts": "^4.2.1",
     "echarts-for-react": "^2.0.15-beta.0",
+    "es5-shim": "^4.5.13",
     "eslint": "5.12.0",
     "eslint-config-react-app": "^3.0.8",
     "eslint-loader": "2.1.1",
@@ -34,6 +36,8 @@
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-react": "7.12.4",
     "esri-loader": "^2.9.2",
+    "eventsource-polyfill": "^0.9.6",
+    "fetch-ie8": "^1.5.0",
     "file-loader": "2.0.0",
     "fs-extra": "7.0.1",
     "html-to-draftjs": "^1.4.0",
@@ -56,6 +60,7 @@
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.5.0",
     "postcss-safe-parser": "4.0.1",
+    "prop-types": "^15.7.2",
     "query-string": "^6.5.0",
     "react": "^16.8.6",
     "react-amap": "^1.2.8",
@@ -63,9 +68,11 @@
     "react-dev-utils": "^8.0.0",
     "react-dom": "^16.8.6",
     "react-draft-wysiwyg": "^1.13.2",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.0",
     "react-zmage": "^0.8.4",
     "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
